2009-01-08 - Sean Huber (shuber@huberry.com)
  * Update comments and documentation
  * Update README
  * Add gemspec
  * Add support for data mapper
  * Attribute methods are now defined before calling attr_encrypted when using active record
  * Add ability to specify your own encoding directives
  * Update logic that evaluates symbol and proc options

2009-01-07 - Sean Huber (shuber@huberry.com)
  * Initial commit
  * Add comments/documentation to the active record related logic
  * Add more attr_encrypted tests
  * Update tests and comments